--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,13 @@
-:root 
+:root
 {
     --main-bg-color: #222222;
-
 }
 
 html, body
 {
     margin: 0;
     padding: 0;
-    border: none;   
+    border: none;
 }
 
 body
@@ -22,8 +21,8 @@ body
     height: 100%;
 
     background: var(--main-bg-color);
-    background-image: url("../img/bg1.png"), url("../img/bg2.png");
-    background-repeat: repeat-x, repeat;
+    background-image: url("../img/bg.jpg");
+    background-repeat: repeat;
 
     font-family: monospace;
 
