--- a/css/mainpagetheme.css
+++ b/css/mainpagetheme.css
@@ -261,7 +261,7 @@ html, body
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
 }
 
 .stickyNavbar
@@ -281,6 +281,11 @@ html, body
     cursor: pointer;
 
     -webkit-transition: all 0.4s ease-in-out;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .navbarItem:hover
@@ -298,13 +303,15 @@ html, body
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: flex-start;
+    align-items: stretch;
 }
 
 .experienceLeft
 {
     width: 200px;
     flex-shrink: 0;
+
+    border-right: 3px solid var(--page-content-text-color);
 }
 
 .experienceJobTitle
@@ -326,8 +333,7 @@ html, body
 .experienceRight
 {
     padding-left: 10px;
-
-    border-left: 3px solid var(--page-content-text-color);
+    flex-grow: 1;
 }
 
 .experienceCompany
@@ -349,6 +355,14 @@ html, body
 #educationBody
 {
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.educationItem
+{
+    margin: 15px;
 }
 
 .educationItem > p
@@ -358,8 +372,12 @@ html, body
 
 .educationDegreeTitle
 {
+    text-align: center;
+
     font-size: 20px;
     color: var(--page-content-text-color);
+
+    border-bottom: 3px solid var(--page-content-text-color);
 }
 
 .educationSchool
@@ -371,4 +389,31 @@ html, body
 {
     font-size: 14px;
     color: rgba(0, 0, 0, 0.4);
+}
+
+/*********************************
+ * CONTENT SECTION SKILLS
+ *********************************/
+#skillsBody
+{
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.skillItem
+{
+    min-width: 120px;
+
+    margin: 5px 10px 5px 10px;
+    padding: 5px 15px 5px 15px;
+
+    border: 3px solid var(--page-content-text-color);
+    border-radius: 20px;
+
+    font-size: 12px;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
 }
